<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_cl_fond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".View.MainActivity">

    <ImageView
        android:id="@+id/logo_izly_main"
        android:layout_width="137dp"
        android:layout_height="169dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo_izly"
        app:layout_constraintBottom_toTopOf="@+id/bienvenue_main_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bienvenue_main_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_black"
        android:text="@string/bienvenue_sur_izly"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/connecte_toi_main_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_black"
        android:text="@string/connecte_toi"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenue_main_tv"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/identifiant_main_tv"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/identifiant"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenue_main_tv"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/identifiant_main_et"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_edittext_bg"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center_vertical"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#939393"
        android:textColorHint="#606060"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identifiant_main_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/code_secret_main_tv"
        android:layout_width="135dp"
        android:layout_height="31dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/code_secret"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identifiant_main_et"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/code_secret_main_et"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext_bg"
        android:ems="10"
        android:fontFamily="@font/nunito_regular"
        android:inputType="numberPassword"
        android:isScrollContainer="false"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="#686868"
        android:textColorHint="#606060"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_secret_main_tv"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connexion_main_bouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/connexion"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_secret_main_et"
        app:layout_constraintVertical_bias="0.552"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/fond_bouton"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/pas_encore_inscrit_main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/pas_encore_inscrit"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/mdp_oublie_main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_secret_main_et"
        app:layout_constraintVertical_bias="0.133" />

    <Button
        android:id="@+id/inscris_toi_main_button"
        android:layout_width="142dp"
        android:layout_height="38dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/inscris_toi_ici"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/connexion_main_bouton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pas_encore_inscrit_main_tv"
        app:layout_constraintTop_toBottomOf="@+id/code_secret_main_et"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/mdp_oublie_main_button"
        android:layout_width="187dp"
        android:layout_height="39dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/mot_de_passe_oublie"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/connexion_main_bouton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscris_toi_main_button"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>